--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="index.html">Home</a>
                     <!-- <a href="#">Skills</a> -->
                     <a href="#">Project's</a>
-                    <a href="#">Conatct</a>
+                    <a href="connect.html">Contact</a>
                 </div>
             </div>
         </nav>
@@ -68,38 +68,33 @@
 <img class="icon-10" src="https://dm2306files.storage.live.com/y4mpjWB8hWmVEy1O12ZIN8I_oUMCOpnTWzlJwO8MZkg7_U3-jmGBJSNoRctgdZUsLRioCv4QHNgYTm_s0fYDy2ekRDRjCRb5UuMsZYrpgpjQuNMNRpgkx-iXrWFhgHeNH0lilXeBzNJ5B8NCBeRkYPVIhgXgXFR5EjoTlNAklmjbM51YDWMKie4f3EChdJKXKdF?width=512&height=512&cropmode=none" alt="">
 <img class="icon-11" src="https://dm2306files.storage.live.com/y4mgntFjXt-90mOUZH2ZehyFQLbasfaK4iBqK2kDCzuHDo8jfe1KeLKAwA6szCcxiOBApHR5z9T-4Xi9yuGUB7_sqx45hWiSeYDSQP6kZPzNvjpHbYmX-Erlf-EYQZbKEz3JcMezUzkATodpT_qh3sWlFHV00DF3wt79Cro-0ACtGSdKN6JwXCqvCOO17-vqbTG?width=512&height=512&cropmode=none" alt="">
 
+<!-- ================================================== -->
 
-<p class="text5">TOP PROJECTS <br></p>
-<div class="projects">
-    <a href="#"><img class="project1" src="https://dm2306files.storage.live.com/y4miPu7beaaoxRATHBrpThH2pF_VL5_j85893qu4Or7KqCEP5nZl-E5yUFmePFJ9ZlT6VOkoOSns2YZLnFxKuRJkD0C76OCdoaRAENtPWQnALaIYiAbsdZ-eBeK5qVO-C-z4Zt6LQRIa5gTUuwVPXmcKF0oDysSPgD7z9zBD99TeIs71C5-H7uGD3791sitk91d?width=1920&height=1280&cropmode=none" alt=""></a>
-    <a href="#"><img class="project2" src="https://dm2306files.storage.live.com/y4m_zfgTN1qWlBeVWaGNBhthexONBak1IhjUWeT5oWcd4j0vuKIcPq_gXKZcnL8wXComstqEwuePVMMSk2zDaUfsCeYYmQJUlf8n6yyJyr6nM1qYiJEkXAzLUFIqq6N9JQQqfv0fhpLO-MMK4di4YXZyR7idrXI7p4VCAVmAz9jByB5DyGDiTQRvGS6DThgDIM9?width=1920&height=1210&cropmode=none" alt=""></a>
+           <p class="text5">TOP PROJECTS <br></p>
+                    <div class="projects">
+                     <a href=" https://norwegian07.github.io/coffeeshopex/"><img class="project1" src="https://dm2306files.storage.live.com/y4miPu7beaaoxRATHBrpThH2pF_VL5_j85893qu4Or7KqCEP5nZl-E5yUFmePFJ9ZlT6VOkoOSns2YZLnFxKuRJkD0C76OCdoaRAENtPWQnALaIYiAbsdZ-eBeK5qVO-C-z4Zt6LQRIa5gTUuwVPXmcKF0oDysSPgD7z9zBD99TeIs71C5-H7uGD3791sitk91d?width=1920&height=1280&cropmode=none" alt=""></a>
+                             <a href="https://norwegian07.github.io/photographyweb3/"><img class="project2" src="https://dm2306files.storage.live.com/y4m_zfgTN1qWlBeVWaGNBhthexONBak1IhjUWeT5oWcd4j0vuKIcPq_gXKZcnL8wXComstqEwuePVMMSk2zDaUfsCeYYmQJUlf8n6yyJyr6nM1qYiJEkXAzLUFIqq6N9JQQqfv0fhpLO-MMK4di4YXZyR7idrXI7p4VCAVmAz9jByB5DyGDiTQRvGS6DThgDIM9?width=1920&height=1210&cropmode=none" alt=""></a>
 </div>
        
 <p class="text6">LET'S CONNECT & CREATE...</p>
-<a href=""><button class="connect">Contact</button></a>
-
-
-
-<!-- <div class="contact">
-    <p class="text4">LET'S CONNECT & CREATE...</p>
- <div class="border">
-       <img class="mail" src="https://dm2306files.storage.live.com/y4mSt1wWQ_0s_4690uX3EqHcUimLd1n6LLGkMV3DMeY8nyX8LWtzHlegL6eT8FhkD88Ksa0NpFXO2yYB2d3LTcNuxfkIJDtSsfUtqlaqxV1oss9mH34e_yCZTOILbP0pM9Dr8FMKeRIgbUj6mj6pgINu33dnSg7XzykvU533HreLiXFExCL25wlkzQW6ZO1H46n?width=1280&height=914&cropmode=none" alt="">
-         </div>
-  
-        <p class="mailname">nyssacoders@gmail.com</p>
-
-    <div class="social">
-    <svg id="insta" xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-      </svg>
-
-      <svg id="lin" xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-      </svg>
-    </div>
-</div> -->
+<a href="connect.html"><button class="connect">Contact</button></a>
 
 </div>
+
+<footer>
+    <div class="main-grid">
+        <p class="copyright">
+            &copy; 2022 Ajay vadluri (nyssacoders)
+        </p>
+        <div class="footer-nav">
+            <a href="index.html">Home</a>
+            <a href="#"> Project's</a>
+            <a href="connect.html">Contact</a>
+        </div>
+    </div>
+</footer>
+</div>
+
 
 
 
@@ -118,6 +113,6 @@
 
 
         <script src="jquery-3.6.0.min.js"></script>
-        <script src="profile.js"></script>
+     
     </body>
 </html>
