--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-<div class="tem">
+
         <p class="text3">Self Developed Skills <br></p>
         <p class="text4"> In Html, Css, JavaScript and J-Query</p>
         <div class="skills">
@@ -91,7 +91,7 @@
 
         <!-- ================================================== -->
 
-        <p class="text5">TOP PROJECTS <br></p>
+        <!-- <p class="text5">TOP PROJECTS <br></p>
         <div class="projects">
             <a href=" https://norwegian07.github.io/coffeeshopex/"><img class="project1" src="https://dm2306files.storage.live.com/y4miPu7beaaoxRATHBrpThH2pF_VL5_j85893qu4Or7KqCEP5nZl-E5yUFmePFJ9ZlT6VOkoOSns2YZLnFxKuRJkD0C76OCdoaRAENtPWQnALaIYiAbsdZ-eBeK5qVO-C-z4Zt6LQRIa5gTUuwVPXmcKF0oDysSPgD7z9zBD99TeIs71C5-H7uGD3791sitk91d?width=1920&height=1280&cropmode=none"
                     alt=""></a>
@@ -117,8 +117,7 @@
         </div>
     </footer>
     </div>
-
-</div>
+ -->
 
 
 
