--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
 
         <!-- ================================================== -->
 
-        <!-- <p class="text5">TOP PROJECTS <br></p>
+         <p class="text5">TOP PROJECTS <br></p>
         <div class="projects">
             <a href=" https://norwegian07.github.io/coffeeshopex/"><img class="project1" src="https://dm2306files.storage.live.com/y4miPu7beaaoxRATHBrpThH2pF_VL5_j85893qu4Or7KqCEP5nZl-E5yUFmePFJ9ZlT6VOkoOSns2YZLnFxKuRJkD0C76OCdoaRAENtPWQnALaIYiAbsdZ-eBeK5qVO-C-z4Zt6LQRIa5gTUuwVPXmcKF0oDysSPgD7z9zBD99TeIs71C5-H7uGD3791sitk91d?width=1920&height=1280&cropmode=none"
                     alt=""></a>
-            <a href="https://norwegian07.github.io/photographyweb3/"><img class="project2" src="https://dm2306files.storage.live.com/y4m_zfgTN1qWlBeVWaGNBhthexONBak1IhjUWeT5oWcd4j0vuKIcPq_gXKZcnL8wXComstqEwuePVMMSk2zDaUfsCeYYmQJUlf8n6yyJyr6nM1qYiJEkXAzLUFIqq6N9JQQqfv0fhpLO-MMK4di4YXZyR7idrXI7p4VCAVmAz9jByB5DyGDiTQRvGS6DThgDIM9?width=1920&height=1210&cropmode=none"
-                    alt=""></a>
+          <!-- <a href="https://norwegian07.github.io/photographyweb3/">--> <img class="project2" src="https://dm2306files.storage.live.com/y4m_zfgTN1qWlBeVWaGNBhthexONBak1IhjUWeT5oWcd4j0vuKIcPq_gXKZcnL8wXComstqEwuePVMMSk2zDaUfsCeYYmQJUlf8n6yyJyr6nM1qYiJEkXAzLUFIqq6N9JQQqfv0fhpLO-MMK4di4YXZyR7idrXI7p4VCAVmAz9jByB5DyGDiTQRvGS6DThgDIM9?width=1920&height=1210&cropmode=none"
+                    alt=""><!--</a>-->
         </div>
 
-        <p class="text6">LET'S CONNECT & CREATE...</p>
-        <a href="connect.html"><button class="connect">Contact</button></a>
+         <p class="text6">LET'S CONNECT & CREATE...</p>
+        <a href="connect.html"><button class="connect">Contact</button></a> -->
 
     </div>
 
-    <footer>
+   <footer>
         <div class="main-grid">
             <p class="copyright">
                 &copy; 2022 Ajay vadluri (nyssacoders)
@@ -117,7 +117,7 @@
         </div>
     </footer>
     </div>
- -->
+
 
 
 
