--- a/index.html
+++ b/index.html
@@ -100,23 +100,22 @@
         </div>
 
          <p class="text6">LET'S CONNECT & CREATE...</p>
-        <a href="connect.html"><button class="connect">Contact</button></a> -->
+        <a href="connect.html"><button class="connect">Contact</button></a> 
 
     </div>
 
    <footer>
-        <div class="main-grid">
             <p class="copyright">
                 &copy; 2022 Ajay vadluri (nyssacoders)
             </p>
             <div class="footer-nav">
                 <a href="index.html">Home</a>
                 <a href="#"> Project's</a>
-                <a href="connect.html">Contact</a>
-            </div>
+                <!-- <a href="connect.html">Contact</a> -->
+           
         </div>
     </footer>
-    </div>
+
 
 
 
